css/styles.css
body {
  background-color: bisque;
}
.content {
  width: 90%;
  margin: 0 auto;
}

.skills-container {
  width: 90%;
  margin: 0 auto;
}

.education h2 {
  text-align: center;
}

.education {
  width: 90%;
}

.skills {
  margin-top: 5em;
}

.skills h2 {
  text-align: center;
}

.left h4 {
  text-align: center;
}
.list {
  width: 80%;
  margin: 0 auto;
}
.list ul {
  padding: 0;
  margin-left: 40%;
}

.middle h4 {
  text-align: center;
}

.right h4 {
  text-align: center;
}

.video-content {
  width: 60%;
}

.bleach {
  width: 85%;
  margin: 0 auto;
}

.container-content {
  margin-bottom: 5em;
}

.one-piece {
  width: 85%;
  margin: 0 auto;
}

.attack-on-titan {
  width: 85%;
  margin: 0 auto;
}

/*rules BELOW are all for nav*/
.nav-container {
  width: 90%;
  margin: 0 auto;
}
.nav-container ul {
  margin: 0;
  padding: 0;
  margin: 0 auto;
}
.nav-container li {
  width: 100%;
  background-color: aqua;
  text-align: center;
  box-sizing: content-box;
  margin-bottom: 5%;
  list-style: none;
}

.nav-container li a {
  display: block;
  padding: 0.8em 0;
}

.projects {
  margin-top: 5em;
  width: 90%;
}

.projects h4 {
  text-align: center;
  margin-top: 2em;
}

.projects h2 {
  text-align: center;
}

.nav-container li a:hover {
  background-color: azure;
}

h1 {
  font-family: "Courier New", Courier, monospace;
  text-align: center;
  margin: 2em 0 3em;
}
.dosa-info {
  background-color: darkgray;
}

h3 {
  text-align: center;
  padding: 10px;
}

.dosa-info img,
.samosa-info img,
.dates-info img {
  margin: 20px;
  border-radius: 20px;
  height: 360px;
  width: 539px;
}

.dosa-food-content {
  position: absolute;
  width: 400px;
  left: 800px;
  bottom: 170px;
}
.samosa-info {
  background-color: aqua;
}

.samosa-info img {
  position: relative;
  left: 600px;
}
.samosa-info {
  position: relative;
}
.samosa-food-content {
  position: absolute;
  left: 50px;
  bottom: 100px;
}

.dates-info {
  background-color: lightgreen;
}

.dates-info {
  position: relative;
}

.dates-food-content {
  position: relative;
  bottom: 250px;
  left: 680px;
}

.contact {
  width: 90%;
  margin-top: 5em;
}

.contact li {
  display: block;
  position: relative;
  float: left;
  margin-right: 2em;
}

.contact li a {
  display: block;
}

.contact ul{
  width: 90%;
  overflow: hidden;
  margin-left: 30%;

}

.contact h2 {
  text-align: center;
}

@media screen and (min-width: 800px) {
  .nav-container {
    width: 100%;
  }
  .nav-container li {
    width: 15%;
    padding: 0;
    display: block;
    position: relative;
    float: left;
    background-color: transparent;
    margin-bottom: 0;
  }
  .nav-container li a {
    display: block;
    padding: 0.8em 0;
  }
  .nav-container ul {
    overflow: hidden;
    margin: 0 auto;
    background-color: aqua;
  }

  .nav-container li:nth-child(3) {
    float: right;
  }
  .nav-container li:nth-child(2) {
    margin-right: 17%;
    margin-left: 17%;
  }
  .nav-container li:nth-child(1) {
    margin-left: 10%;
  }
  .nav-container li:nth-child(3) {
    margin-right: 10%;
  }
  /**rules ABOVE are for nav bar**/

  .container-content {
    width: 20%;
    float: right;
    margin-right: 10%;
  }

  .video-content {
    float: left;
    margin-bottom: 5em;
  }

  h2 {
    text-align: center;
  }

  .page-content {
    width: 1200px;
    margin: 0 auto;
  }

  .education {
    width: 70%;
    margin: 0 auto;
    margin-bottom: 4em;
  }
  .education li {
    text-align: center;
    margin: 1em;
  }
}

